k3s/base/mysql/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mysql-gateway
  namespace: mysql
spec:
  selector:
    istio: ingressgateway # Use the istio-ingressgateway
  servers:
    - port:
        number: 3306
        name: http
        protocol: HTTP
      hosts:
        - "mysql.rumahdaud.com" # Replace with your desired hostname
